# f1

./: add_issues.sh  init_gh_project.sh  pyproject.toml
doc/: 3モジュールプロトタイピング.md  Autocadフォーマット.md  Claude Code.md  NVIDIA Omniverse.md  NeMo‑RL.md  PAE論文.md  PoC仕様書.md  devmemo.md  ビジネス着想の整理.md  フルRL実装方法.md  メインストリーム：KG.md  メインストリーム：アーキテクチャ.md  建具RLエージェント.md  強化学習とナレッジグラフ.md
src/kg/loaders/: firelaw_loader.py
